# monolith

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: c714a5949cd3_initial_migration.py  e23f2257632b_add_steps_table_to_db.py
src/: config.py  main.py
src/api/notebook/: models.py  router.py  schemas.py  service.py  test_router.py
src/db/: database.py
