[tool.poetry]
name = "notebooks-api"
version = "0.1.0"
description = "Sample API to manage notebooks and steps"
authors = ["Zoltan Arvai"]
readme = "README.md"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.22"
httpx = "^0.27.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
select = ["C", "E", "F", "W", "B", "B950"]
extend-ignore = ["E203", "E501", "E704", "W503"]

[tool.isort]
profile = "black"

